# Phramacy_management

./: CMakeLists.txt  README.md
database/: init.sql
docs/: BaoCaoDoAn.md  Implementation_plan.md  technical_doc.txt
include/: DatabaseManager.h
include/models/: Category.h  Invoice.h  Medicine.h
include/repositories/: CategoryRepository.h  IRepository.h  InvoiceRepository.h  MedicineRepository.h
include/services/: PharmacyService.h
include/ui/: UIManager.h
src/: DatabaseManager.cpp  main.cpp
src/repositories/: CategoryRepository.cpp  InvoiceRepository.cpp  MedicineRepository.cpp
src/services/: PharmacyService.cpp
src/ui/: UIManager.cpp
